@@ -53,6 +53,7 @@
 
 [0 0 0 0 1]
 
+0
 [512, [16, 8, 4], [[-1, -2]~, 29, [0, -1]~]]
 
 [1/2   0]
@@ -202,4 +203,4 @@
 []
   *** nfinit: Warning: non-monic polynomial. Result of the form [nf,c].
 [[2, [0, 1]~, 2, 1, [0, -2; 1, 0]]]
-Total time spent: 18
+Total time spent: 19
