@@ -21,7 +21,7 @@ for(i=1,1000,if (i%p && g^ideallog(,i,z)[1] != i, error(i)))
 z=idealstar(,3120,2);
 Mat(vector(#z,i,ideallog(,z.gen[i],z)))
 
-\\idealstar(Qi,matdiagonal([6,12]))
+nfisideal(Qi,matdiagonal([6,12]))
 P = idealprimedec(Qi,2)[1];
 idealprincipalunits(Qi,P,10)
 idealintersect(Qi, 1/2,1/2)
